# jobstream-lg

./: AGENTS.md  agent_guide.md  agent_review_notes.md  debug_checkpoints.py  debug_snapshot.py  debug_tracker.py  langgraph_agent_guidelines.md  main.py  merging_branches_strategy.md  pyproject.toml  test_approve.py  test_thread.py
.deepagents/: AGENTS.md
agent-design-documents/: agent_design.MD  other_design_notes.MD  prompt_details.MD  templates.MD
archive/: agent_v2_details.md  archive_feature.py  langgraph_lessons.md  master_board_v1.json  parsed_data_map.md  stealth_page_fetch.py
archive/feature-trackers/: E-01-F-01-CLI_Entry_Point.json  E-01-F-02-Parent_Graph_Implementation.json  E-02-F-05-Job_Ingestion_Node_(URL_&_Text_Handling).json  E-03-F-07-Evaluate_Fit_Node_&_Question_Generation.json  E-03-F-07-JSON_Artifact_Persistence.json  E-03-F-08-Strategy_&_JSON_Diff_Generator_Node.json  E-03-F-09-Revise_Strategy_Node.json  E-04-F-11-Clarification_Interrupt_UI.json  E-04-F-12-Strategy_Approval_&_Diff_Review_UI.json  E-05-F-14-JSON_Diff_Applier_Utility.json  E-05-F-15-Cover_Letter_Generator_Node.json  E-05-F-16-WeasyPrint_PDF_Compiler_Utility_&_Node.json
config/: config.yaml
data/: job_tracker.json
planning/docs/: TRD.md
planning/trackers/: active_feature.json  master_board.json
src/: child_graph.py  graph.py  resume_converter.py  schemas.py  state.py
src/nodes/: child_nodes.py  cover_letter_generator_node.py  parent_nodes.py  (+3 more)
tests/: conftest.py  test_apply_changes_node.py  test_child_graph.py  test_cover_letter_generator_node.py  test_evaluate_fit_node.py  test_graph.py  test_parent_nodes.py  test_pdf_compiler.py  test_pdf_compiler_node.py  test_resume_converter.py  test_revise_strategy_node.py  test_schemas.py  test_scraper.py  test_strategy_generator_node.py
(+23 files in other folders)
