[project]
name = "jobstream-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "markdownify>=1.2.2",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "requests-mock>=1.12.1",
    "ruff>=0.15.15",
]
