[project]
name = "jobstream-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
]
