[project]
name = "jobstream-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "undetected-chromedriver>=3.5.5",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "requests-mock>=1.12.1",
    "ruff>=0.15.15",
]
